@@ -89,6 +89,8 @@ dillo-fltk2
  - Switched dns.c from gethostbyname* to getaddrinfo (& removed libc5 code).
  - Made "New browser window" inherit the panel style of its parent.
    Patches: Johannes Hofmann
++- Made progress bars resize automatically.
+   Patches: Johannes Hofmann, Jorge Arellano Cid
 +- Improved FLTK library detection at configure time.
    Patch: Frank Gevaerts
 +- Bound Ctrl-R to reload.
